--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# Application specific
+logs/
+storage/
+static/
+data/raw/
+data/processed/
+
+# Temporary files
+tmpclaude-*-cwd
+tmp*
+nul
+
+# IDE and Editor
+.claude/
+.streamlit/
+.cursorrules
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
