--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ nul
 .cursorrules
 .vscode/
 
+# GitHub Token Backup (NEVER commit this!)
+.github_token_backup.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
