feat: Add centralized config management and improve type safety
- Add config module (src/config/settings.py) with AppSettings, EmbeddingSettings, GenerationSettings, RetrievalSettings, StorageSettings

- Add type definitions (src/types.py) for ProcessResult, GenerateAnswerResult, DBStatus, SearchResult

- Improve type hints in src/ui/streamlit_helpers.py (replace Dict[str, any] with proper types)

- Integrate config module into existing code (store.py, search.py)

- Add test files: test_embedding.py, test_search.py, test_reranker.py, test_generation.py

- Expand .env.example with detailed configuration examples

- Add project analysis report (RAG_ANALYSIS_REPORT.md)

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,28 @@
+﻿# Google Gemini API險ｭ螳・# Google AI Studio (https://ai.dev/) 縺ｧAPI繧ｭ繝ｼ繧貞叙蠕励＠縺ｦ縺上□縺輔＞
 GOOGLE_API_KEY=your_api_key_here
+
+# ChromaDB險ｭ螳夲ｼ医が繝励す繝ｧ繝ｳ・・CHROMA_STORAGE_PATH=storage/chroma
+CHROMA_COLLECTION_NAME=notebook_rag_collection
+
+# 繧｢繝励Μ繧ｱ繝ｼ繧ｷ繝ｧ繝ｳ險ｭ螳夲ｼ医が繝励す繝ｧ繝ｳ・・MAX_FILE_SIZE_MB=10
+MAX_CHAT_HISTORY=50
+LOG_LEVEL=INFO
+
+# 蝓九ａ霎ｼ縺ｿ繝｢繝・Ν險ｭ螳夲ｼ医が繝励す繝ｧ繝ｳ・・EMBEDDING_MODEL=models/text-embedding-004
+
+# 逕滓・繝｢繝・Ν險ｭ螳夲ｼ医が繝励す繝ｧ繝ｳ・・GENERATION_MODEL=models/gemini-flash-latest
+GENERATION_TEMPERATURE=0.7
+GENERATION_MAX_TOKENS=2048
+
+# 讀懃ｴ｢險ｭ螳夲ｼ医が繝励す繝ｧ繝ｳ・・DEFAULT_TOP_K=3
+DEFAULT_INITIAL_K=100
+DEFAULT_FINAL_K=20
+RERANKING_ENABLED=true
+
+# 繝・・繧ｿ繝・ぅ繝ｬ繧ｯ繝医Μ險ｭ螳夲ｼ医が繝励す繝ｧ繝ｳ・・DATA_RAW_DIR=data/raw
+DATA_PROCESSED_DIR=data/processed
+STATIC_DIR=static
+CHAT_HISTORY_PATH=storage/chat_history.json
+
+# Streamlit險ｭ螳夲ｼ医が繝励す繝ｧ繝ｳ・・STREAMLIT_SERVER_PORT=8501
+STREAMLIT_SERVER_ADDRESS=localhost
